# SDL-Graphing-App-unfinished

./: CMakeLists.txt  README.md  control.c  draw.h
graph/: control.h  draw.c  main.c
text/: CMakeLists.txt  main.c
